Fixed the fix (Inception) for pullables with footer. Created the PhoneGap config.xml file and resource structure for icons and splashes. Implemented Lungo.Sugar.Growl for loading modals. Removed unnecessary libraries.

--- a/lungo.js/lungo.theme.gitbucket.css
+++ b/lungo.js/lungo.theme.gitbucket.css
@@ -2,9 +2,9 @@
  * Stylesheet
  *
  * @namespace LUNGO.Theme
- * @class Default
+ * @class GitBucket
  *
- * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
+ * @author Rodrigo Fernández-Romero <fdez.romero@streamsocial.com> || @FdezRomero
  */
 
 @import "lungo.theme.default.font.css";
@@ -186,10 +186,8 @@ section.aside.onright {
 .button {
   border-bottom: 1px inset rgba(0, 0, 0, 0.2);
   -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
   border-radius: 2px;
   -webkit-background-clip: padding-box;
-  -moz-background-clip: padding;
   background-clip: padding-box;
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 3px rgba(0, 0, 0, 0.2);
 }
@@ -278,10 +276,8 @@ input[type="range"]:active::-webkit-slider-thumb {
 .bubble {
   color: #fff;
   -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
   border-radius: 2px;
   -webkit-background-clip: padding-box;
-  -moz-background-clip: padding;
   background-clip: padding-box;
   text-shadow: none;
   font-weight: bold !important;
